book: update zh
Updated via the `update-book.yml` GitHub workflow.

--- a/external/book/content/book/zh/v2/Git-与其他系统-作为客户端的-Git.html
+++ b/external/book/content/book/zh/v2/Git-与其他系统-作为客户端的-Git.html
@@ -17,6 +17,11 @@ book:
     next: book/zh/v2/Git-与其他系统-迁移到-Git
 title: Git - 作为客户端的 Git
 url: "/book/zh/v2/Git-与其他系统-作为客户端的-Git.html"
+aliases:
+- "/book/zh/Git-与其他系统.html"
+- "/book/zh/v1/Git-与其他系统.html"
+- "/book/zh/Git-与其他系统-Git-与-Subversion.html"
+- "/book/zh/v1/Git-与其他系统-Git-与-Subversion.html"
 ---
 <p>现实并不总是尽如人意。
 通常，你不能立刻就把接触到的每一个项目都切换到 Git。
