--- a/external/book/content/book/zh/v2/Git-与其他系统-总结.html
+++ b/external/book/content/book/zh/v2/Git-与其他系统-总结.html
@@ -17,6 +17,9 @@ book:
     next: book/zh/v2/Git-内部原理-底层命令与上层命令
 title: Git - 总结
 url: "/book/zh/v2/Git-与其他系统-总结.html"
+aliases:
+- "/book/zh/Git-与其他系统-总结.html"
+- "/book/zh/v1/Git-与其他系统-总结.html"
 ---
 <h2 id="_总结_11">总结</h2>
 <div class="paragraph">
