--- a/external/book/content/book/zh/v2/Git-与其他系统-迁移到-Git.html
+++ b/external/book/content/book/zh/v2/Git-与其他系统-迁移到-Git.html
@@ -17,6 +17,9 @@ book:
     next: book/zh/v2/Git-与其他系统-总结
 title: Git - 迁移到 Git
 url: "/book/zh/v2/Git-与其他系统-迁移到-Git.html"
+aliases:
+- "/book/zh/Git-与其他系统-迁移到-Git.html"
+- "/book/zh/v1/Git-与其他系统-迁移到-Git.html"
 ---
 <h2 id="_migrating">迁移到 Git</h2>
 <div class="paragraph">
