--- a/external/book/content/book/zh/v2/Git-内部原理-传输协议.html
+++ b/external/book/content/book/zh/v2/Git-内部原理-传输协议.html
@@ -17,6 +17,9 @@ book:
     next: book/zh/v2/Git-内部原理-维护与数据恢复
 title: Git - 传输协议
 url: "/book/zh/v2/Git-内部原理-传输协议.html"
+aliases:
+- "/book/zh/Git-内部原理-传输协议.html"
+- "/book/zh/v1/Git-内部原理-传输协议.html"
 ---
 <h2 id="_传输协议">传输协议</h2>
 <div class="paragraph">
