--- a/external/book/content/book/zh/v2/Git-内部原理-包文件.html
+++ b/external/book/content/book/zh/v2/Git-内部原理-包文件.html
@@ -17,6 +17,9 @@ book:
     next: book/zh/v2/Git-内部原理-引用规范
 title: Git - 包文件
 url: "/book/zh/v2/Git-内部原理-包文件.html"
+aliases:
+- "/book/zh/Git-内部原理-Packfiles.html"
+- "/book/zh/v1/Git-内部原理-Packfiles.html"
 ---
 <h2 id="_包文件">包文件</h2>
 <div class="paragraph">
