--- a/external/book/content/book/zh/v2/Git-内部原理-底层命令与上层命令.html
+++ b/external/book/content/book/zh/v2/Git-内部原理-底层命令与上层命令.html
@@ -17,6 +17,11 @@ book:
     next: book/zh/v2/Git-内部原理-Git-对象
 title: Git - 底层命令与上层命令
 url: "/book/zh/v2/Git-内部原理-底层命令与上层命令.html"
+aliases:
+- "/book/zh/Git-内部原理.html"
+- "/book/zh/v1/Git-内部原理.html"
+- "/book/zh/Git-内部原理-底层命令-Plumbing-和高层命令-Porcelain.html"
+- "/book/zh/v1/Git-内部原理-底层命令-Plumbing-和高层命令-Porcelain.html"
 ---
 <p>无论是从之前的章节直接跳到本章，还是读完了其余章节一直到这——你都将在本章见识到 Git 的内部工作原理和实现方式。
 我们认为学习这部分内容对于理解 Git 的用途和强大至关重要。不过也有人认为这些内容对于初学者而言可能难以理解且过于复杂。
