--- a/external/book/content/book/zh/v2/Git-内部原理-引用规范.html
+++ b/external/book/content/book/zh/v2/Git-内部原理-引用规范.html
@@ -17,6 +17,9 @@ book:
     next: book/zh/v2/Git-内部原理-传输协议
 title: Git - 引用规范
 url: "/book/zh/v2/Git-内部原理-引用规范.html"
+aliases:
+- "/book/zh/Git-内部原理-The-Refspec.html"
+- "/book/zh/v1/Git-内部原理-The-Refspec.html"
 ---
 <h2 id="_refspec">引用规范</h2>
 <div class="paragraph">
