--- a/external/book/content/book/zh/v2/Git-内部原理-维护与数据恢复.html
+++ b/external/book/content/book/zh/v2/Git-内部原理-维护与数据恢复.html
@@ -17,6 +17,9 @@ book:
     next: book/zh/v2/Git-内部原理-环境变量
 title: Git - 维护与数据恢复
 url: "/book/zh/v2/Git-内部原理-维护与数据恢复.html"
+aliases:
+- "/book/zh/Git-内部原理-维护及数据恢复.html"
+- "/book/zh/v1/Git-内部原理-维护及数据恢复.html"
 ---
 <h2 id="_维护与数据恢复">维护与数据恢复</h2>
 <div class="paragraph">
