--- a/external/book/content/book/zh/v2/Git-分支-分支简介.html
+++ b/external/book/content/book/zh/v2/Git-分支-分支简介.html
@@ -17,6 +17,11 @@ book:
     next: book/zh/v2/Git-分支-分支的新建与合并
 title: Git - 分支简介
 url: "/book/zh/v2/Git-分支-分支简介.html"
+aliases:
+- "/book/zh/Git-分支.html"
+- "/book/zh/v1/Git-分支.html"
+- "/book/zh/Git-分支-何谓分支.html"
+- "/book/zh/v1/Git-分支-何谓分支.html"
 ---
 <p>
 几乎所有的版本控制系统都以某种形式支持分支。
