--- a/external/book/content/book/zh/v2/Git-分支-总结.html
+++ b/external/book/content/book/zh/v2/Git-分支-总结.html
@@ -17,6 +17,9 @@ book:
     next: book/zh/v2/服务器上的-Git-协议
 title: Git - 总结
 url: "/book/zh/v2/Git-分支-总结.html"
+aliases:
+- "/book/zh/Git-分支-小结.html"
+- "/book/zh/v1/Git-分支-小结.html"
 ---
 <h2 id="_总结_3">总结</h2>
 <div class="paragraph">
