--- a/external/book/content/book/zh/v2/Git-分支-远程分支.html
+++ b/external/book/content/book/zh/v2/Git-分支-远程分支.html
@@ -17,6 +17,9 @@ book:
     next: book/zh/v2/Git-分支-变基
 title: Git - 远程分支
 url: "/book/zh/v2/Git-分支-远程分支.html"
+aliases:
+- "/book/zh/Git-分支-远程分支.html"
+- "/book/zh/v1/Git-分支-远程分支.html"
 ---
 <h2 id="_remote_branches">远程分支</h2>
 <div class="paragraph">
