--- a/external/book/content/book/zh/v2/Git-基础-Git-别名.html
+++ b/external/book/content/book/zh/v2/Git-基础-Git-别名.html
@@ -17,6 +17,9 @@ book:
     next: book/zh/v2/Git-基础-总结
 title: Git - Git 别名
 url: "/book/zh/v2/Git-基础-Git-别名.html"
+aliases:
+- "/book/zh/Git-基础-技巧和窍门.html"
+- "/book/zh/v1/Git-基础-技巧和窍门.html"
 ---
 <h2 id="_git_aliases">Git 别名</h2>
 <div class="paragraph">
