--- a/external/book/content/book/zh/v2/Git-基础-打标签.html
+++ b/external/book/content/book/zh/v2/Git-基础-打标签.html
@@ -17,6 +17,9 @@ book:
     next: book/zh/v2/Git-基础-Git-别名
 title: Git - 打标签
 url: "/book/zh/v2/Git-基础-打标签.html"
+aliases:
+- "/book/zh/Git-基础-打标签.html"
+- "/book/zh/v1/Git-基础-打标签.html"
 ---
 <h2 id="_git_tagging">打标签</h2>
 <div class="paragraph">
