--- a/external/book/content/book/zh/v2/Git-基础-撤消操作.html
+++ b/external/book/content/book/zh/v2/Git-基础-撤消操作.html
@@ -17,6 +17,9 @@ book:
     next: book/zh/v2/Git-基础-远程仓库的使用
 title: Git - 撤消操作
 url: "/book/zh/v2/Git-基础-撤消操作.html"
+aliases:
+- "/book/zh/Git-基础-撤消操作.html"
+- "/book/zh/v1/Git-基础-撤消操作.html"
 ---
 <h2 id="_undoing">撤消操作</h2>
 <div class="paragraph">
