--- a/external/book/content/book/zh/v2/Git-基础-查看提交历史.html
+++ b/external/book/content/book/zh/v2/Git-基础-查看提交历史.html
@@ -17,6 +17,9 @@ book:
     next: book/zh/v2/Git-基础-撤消操作
 title: Git - 查看提交历史
 url: "/book/zh/v2/Git-基础-查看提交历史.html"
+aliases:
+- "/book/zh/Git-基础-查看提交历史.html"
+- "/book/zh/v1/Git-基础-查看提交历史.html"
 ---
 <h2 id="_viewing_history">查看提交历史</h2>
 <div class="paragraph">
