--- a/external/book/content/book/zh/v2/Git-基础-获取-Git-仓库.html
+++ b/external/book/content/book/zh/v2/Git-基础-获取-Git-仓库.html
@@ -17,6 +17,11 @@ book:
     next: book/zh/v2/Git-基础-记录每次更新到仓库
 title: Git - 获取 Git 仓库
 url: "/book/zh/v2/Git-基础-获取-Git-仓库.html"
+aliases:
+- "/book/zh/Git-基础.html"
+- "/book/zh/v1/Git-基础.html"
+- "/book/zh/Git-基础-取得项目的-Git-仓库.html"
+- "/book/zh/v1/Git-基础-取得项目的-Git-仓库.html"
 ---
 <p>如果你只想通过阅读一章来学习 Git，那么本章将是你的不二选择。
 本章涵盖了你在使用 Git 完成各种工作时将会用到的各种基本命令。
