--- a/external/book/content/book/zh/v2/Git-基础-记录每次更新到仓库.html
+++ b/external/book/content/book/zh/v2/Git-基础-记录每次更新到仓库.html
@@ -17,6 +17,9 @@ book:
     next: book/zh/v2/Git-基础-查看提交历史
 title: Git - 记录每次更新到仓库
 url: "/book/zh/v2/Git-基础-记录每次更新到仓库.html"
+aliases:
+- "/book/zh/Git-基础-记录每次更新到仓库.html"
+- "/book/zh/v1/Git-基础-记录每次更新到仓库.html"
 ---
 <h2 id="_记录每次更新到仓库">记录每次更新到仓库</h2>
 <div class="paragraph">
