--- a/external/book/content/book/zh/v2/Git-基础-远程仓库的使用.html
+++ b/external/book/content/book/zh/v2/Git-基础-远程仓库的使用.html
@@ -17,6 +17,9 @@ book:
     next: book/zh/v2/Git-基础-打标签
 title: Git - 远程仓库的使用
 url: "/book/zh/v2/Git-基础-远程仓库的使用.html"
+aliases:
+- "/book/zh/Git-基础-远程仓库的使用.html"
+- "/book/zh/v1/Git-基础-远程仓库的使用.html"
 ---
 <h2 id="_remote_repos">远程仓库的使用</h2>
 <div class="paragraph">
