--- a/external/book/content/book/zh/v2/Git-工具-交互式暂存.html
+++ b/external/book/content/book/zh/v2/Git-工具-交互式暂存.html
@@ -17,6 +17,9 @@ book:
     next: book/zh/v2/Git-工具-贮藏与清理
 title: Git - 交互式暂存
 url: "/book/zh/v2/Git-工具-交互式暂存.html"
+aliases:
+- "/book/zh/Git-工具-交互式暂存.html"
+- "/book/zh/v1/Git-工具-交互式暂存.html"
 ---
 <h2 id="_interactive_staging">交互式暂存</h2>
 <div class="paragraph">
