--- a/external/book/content/book/zh/v2/Git-工具-子模块.html
+++ b/external/book/content/book/zh/v2/Git-工具-子模块.html
@@ -17,6 +17,9 @@ book:
     next: book/zh/v2/Git-工具-打包
 title: Git - 子模块
 url: "/book/zh/v2/Git-工具-子模块.html"
+aliases:
+- "/book/zh/Git-工具-子模块.html"
+- "/book/zh/v1/Git-工具-子模块.html"
 ---
 <h2 id="_git_submodules">子模块</h2>
 <div class="paragraph">
