--- a/external/book/content/book/zh/v2/Git-工具-总结.html
+++ b/external/book/content/book/zh/v2/Git-工具-总结.html
@@ -17,6 +17,9 @@ book:
     next: book/zh/v2/自定义-Git-配置-Git
 title: Git - 总结
 url: "/book/zh/v2/Git-工具-总结.html"
+aliases:
+- "/book/zh/Git-工具-总结.html"
+- "/book/zh/v1/Git-工具-总结.html"
 ---
 <h2 id="_总结_9">总结</h2>
 <div class="paragraph">
