--- a/external/book/content/book/zh/v2/Git-工具-贮藏与清理.html
+++ b/external/book/content/book/zh/v2/Git-工具-贮藏与清理.html
@@ -17,6 +17,9 @@ book:
     next: book/zh/v2/Git-工具-签署工作
 title: Git - 贮藏与清理
 url: "/book/zh/v2/Git-工具-贮藏与清理.html"
+aliases:
+- "/book/zh/Git-工具-储藏（Stashing）.html"
+- "/book/zh/v1/Git-工具-储藏（Stashing）.html"
 ---
 <h2 id="_git_stashing">贮藏与清理</h2>
 <div class="paragraph">
