--- a/external/book/content/book/zh/v2/Git-工具-选择修订版本.html
+++ b/external/book/content/book/zh/v2/Git-工具-选择修订版本.html
@@ -17,6 +17,11 @@ book:
     next: book/zh/v2/Git-工具-交互式暂存
 title: Git - 选择修订版本
 url: "/book/zh/v2/Git-工具-选择修订版本.html"
+aliases:
+- "/book/zh/Git-工具.html"
+- "/book/zh/v1/Git-工具.html"
+- "/book/zh/Git-工具-修订版本（Revision）选择.html"
+- "/book/zh/v1/Git-工具-修订版本（Revision）选择.html"
 ---
 <p>现在，你已经学习了管理或者维护 Git 仓库、实现代码控制所需的大多数日常命令和工作流程。
 你已经尝试了跟踪和提交文件的基本操作，并且掌握了暂存区和轻量级地分支及合并的威力。</p><p>接下来你将学习一些 Git 的强大功能，这些功能你可能并不会在日常操作中使用，但在某些时候你可能会需要。</p>
