--- a/external/book/content/book/zh/v2/Git-工具-重写历史.html
+++ b/external/book/content/book/zh/v2/Git-工具-重写历史.html
@@ -17,6 +17,9 @@ book:
     next: book/zh/v2/Git-工具-重置揭密
 title: Git - 重写历史
 url: "/book/zh/v2/Git-工具-重写历史.html"
+aliases:
+- "/book/zh/Git-工具-重写历史.html"
+- "/book/zh/v1/Git-工具-重写历史.html"
 ---
 <h2 id="_rewriting_history">重写历史</h2>
 <div class="paragraph">
