--- a/external/book/content/book/zh/v2/Git-工具-高级合并.html
+++ b/external/book/content/book/zh/v2/Git-工具-高级合并.html
@@ -17,6 +17,9 @@ book:
     next: book/zh/v2/Git-工具-Rerere
 title: Git - 高级合并
 url: "/book/zh/v2/Git-工具-高级合并.html"
+aliases:
+- "/book/zh/Git-工具-子树合并.html"
+- "/book/zh/v1/Git-工具-子树合并.html"
 ---
 <h2 id="_advanced_merging">高级合并</h2>
 <div class="paragraph">
