--- a/external/book/content/book/zh/v2/_index.html
+++ b/external/book/content/book/zh/v2/_index.html
@@ -13,5 +13,6 @@ page_title: Git - Book
 url: "/book/zh/v2.html"
 aliases:
 - "/book/zh/v2/index.html"
+- "/book/zh/v1/index.html"
 - "/book/zh/index.html"
 ---
