--- a/external/book/content/book/zh/v2/分布式-Git-分布式工作流程.html
+++ b/external/book/content/book/zh/v2/分布式-Git-分布式工作流程.html
@@ -17,6 +17,11 @@ book:
     next: book/zh/v2/分布式-Git-向一个项目贡献
 title: Git - 分布式工作流程
 url: "/book/zh/v2/分布式-Git-分布式工作流程.html"
+aliases:
+- "/book/zh/分布式-Git.html"
+- "/book/zh/v1/分布式-Git.html"
+- "/book/zh/分布式-Git-分布式工作流程.html"
+- "/book/zh/v1/分布式-Git-分布式工作流程.html"
 ---
 <p>
 你现在拥有了一个远程 Git 版本库，能为所有开发者共享代码提供服务，在一个本地工作流程下，你也已经熟悉了基本 Git 命令。你现在可以学习如何利用 Git 提供的一些分布式工作流程了。</p><p>这一章中，你将会学习如何作为贡献者或整合者，在一个分布式协作的环境中使用 Git。
