--- a/external/book/content/book/zh/v2/分布式-Git-向一个项目贡献.html
+++ b/external/book/content/book/zh/v2/分布式-Git-向一个项目贡献.html
@@ -17,6 +17,9 @@ book:
     next: book/zh/v2/分布式-Git-维护项目
 title: Git - 向一个项目贡献
 url: "/book/zh/v2/分布式-Git-向一个项目贡献.html"
+aliases:
+- "/book/zh/分布式-Git-为项目作贡献.html"
+- "/book/zh/v1/分布式-Git-为项目作贡献.html"
 ---
 <h2 id="_contributing_project">向一个项目贡献</h2>
 <div class="paragraph">
