--- a/external/book/content/book/zh/v2/分布式-Git-维护项目.html
+++ b/external/book/content/book/zh/v2/分布式-Git-维护项目.html
@@ -17,6 +17,9 @@ book:
     next: book/zh/v2/分布式-Git-总结
 title: Git - 维护项目
 url: "/book/zh/v2/分布式-Git-维护项目.html"
+aliases:
+- "/book/zh/分布式-Git-项目的管理.html"
+- "/book/zh/v1/分布式-Git-项目的管理.html"
 ---
 <h2 id="_维护项目">维护项目</h2>
 <div class="paragraph">
