--- a/external/book/content/book/zh/v2/服务器上的-Git-Git-守护进程.html
+++ b/external/book/content/book/zh/v2/服务器上的-Git-Git-守护进程.html
@@ -17,6 +17,9 @@ book:
     next: book/zh/v2/服务器上的-Git-Smart-HTTP
 title: Git - Git 守护进程
 url: "/book/zh/v2/服务器上的-Git-Git-守护进程.html"
+aliases:
+- "/book/zh/服务器上的-Git-Git-守护进程.html"
+- "/book/zh/v1/服务器上的-Git-Git-守护进程.html"
 ---
 <h2 id="_git_守护进程">Git 守护进程</h2>
 <div class="paragraph">
