--- a/external/book/content/book/zh/v2/服务器上的-Git-协议.html
+++ b/external/book/content/book/zh/v2/服务器上的-Git-协议.html
@@ -17,6 +17,11 @@ book:
     next: book/zh/v2/服务器上的-Git-在服务器上搭建-Git
 title: Git - 协议
 url: "/book/zh/v2/服务器上的-Git-协议.html"
+aliases:
+- "/book/zh/服务器上的-Git.html"
+- "/book/zh/v1/服务器上的-Git.html"
+- "/book/zh/服务器上的-Git-协议.html"
+- "/book/zh/v1/服务器上的-Git-协议.html"
 ---
 <p>
 到目前为止，你应该已经有办法使用 Git 来完成日常工作。
