--- a/external/book/content/book/zh/v2/服务器上的-Git-在服务器上搭建-Git.html
+++ b/external/book/content/book/zh/v2/服务器上的-Git-在服务器上搭建-Git.html
@@ -17,6 +17,9 @@ book:
     next: book/zh/v2/服务器上的-Git-生成-SSH-公钥
 title: Git - 在服务器上搭建 Git
 url: "/book/zh/v2/服务器上的-Git-在服务器上搭建-Git.html"
+aliases:
+- "/book/zh/服务器上的-Git-在服务器上部署-Git.html"
+- "/book/zh/v1/服务器上的-Git-在服务器上部署-Git.html"
 ---
 <h2 id="_getting_git_on_a_server">在服务器上搭建 Git</h2>
 <div class="paragraph">
