--- a/external/book/content/book/zh/v2/服务器上的-Git-生成-SSH-公钥.html
+++ b/external/book/content/book/zh/v2/服务器上的-Git-生成-SSH-公钥.html
@@ -17,6 +17,9 @@ book:
     next: book/zh/v2/服务器上的-Git-配置服务器
 title: Git - 生成 SSH 公钥
 url: "/book/zh/v2/服务器上的-Git-生成-SSH-公钥.html"
+aliases:
+- "/book/zh/服务器上的-Git-生成-SSH-公钥.html"
+- "/book/zh/v1/服务器上的-Git-生成-SSH-公钥.html"
 ---
 <h2 id="_generate_ssh_key">生成 SSH 公钥</h2>
 <div class="paragraph">
