--- a/external/book/content/book/zh/v2/服务器上的-Git-第三方托管的选择.html
+++ b/external/book/content/book/zh/v2/服务器上的-Git-第三方托管的选择.html
@@ -17,6 +17,17 @@ book:
     next: book/zh/v2/服务器上的-Git-总结
 title: Git - 第三方托管的选择
 url: "/book/zh/v2/服务器上的-Git-第三方托管的选择.html"
+aliases:
+- "/book/zh/服务器上的-Git-公共访问.html"
+- "/book/zh/v1/服务器上的-Git-公共访问.html"
+- "/book/zh/服务器上的-Git-GitWeb.html"
+- "/book/zh/v1/服务器上的-Git-GitWeb.html"
+- "/book/zh/服务器上的-Git-Gitosis.html"
+- "/book/zh/v1/服务器上的-Git-Gitosis.html"
+- "/book/zh/服务器上的-Git-Gitolite.html"
+- "/book/zh/v1/服务器上的-Git-Gitolite.html"
+- "/book/zh/服务器上的-Git-Git-托管服务.html"
+- "/book/zh/v1/服务器上的-Git-Git-托管服务.html"
 ---
 <h2 id="_第三方托管的选择">第三方托管的选择</h2>
 <div class="paragraph">
