--- a/external/book/content/book/zh/v2/服务器上的-Git-配置服务器.html
+++ b/external/book/content/book/zh/v2/服务器上的-Git-配置服务器.html
@@ -17,6 +17,9 @@ book:
     next: book/zh/v2/服务器上的-Git-Git-守护进程
 title: Git - 配置服务器
 url: "/book/zh/v2/服务器上的-Git-配置服务器.html"
+aliases:
+- "/book/zh/服务器上的-Git-架设服务器.html"
+- "/book/zh/v1/服务器上的-Git-架设服务器.html"
 ---
 <h2 id="_setting_up_server">配置服务器</h2>
 <div class="paragraph">
