--- a/external/book/content/book/zh/v2/自定义-Git-Git-属性.html
+++ b/external/book/content/book/zh/v2/自定义-Git-Git-属性.html
@@ -17,6 +17,9 @@ book:
     next: book/zh/v2/自定义-Git-Git-钩子
 title: Git - Git 属性
 url: "/book/zh/v2/自定义-Git-Git-属性.html"
+aliases:
+- "/book/zh/自定义-Git-Git属性.html"
+- "/book/zh/v1/自定义-Git-Git属性.html"
 ---
 <h2 id="_git_属性">Git 属性</h2>
 <div class="paragraph">
