--- a/external/book/content/book/zh/v2/自定义-Git-Git-钩子.html
+++ b/external/book/content/book/zh/v2/自定义-Git-Git-钩子.html
@@ -17,6 +17,9 @@ book:
     next: book/zh/v2/自定义-Git-使用强制策略的一个例子
 title: Git - Git 钩子
 url: "/book/zh/v2/自定义-Git-Git-钩子.html"
+aliases:
+- "/book/zh/自定义-Git-Git挂钩.html"
+- "/book/zh/v1/自定义-Git-Git挂钩.html"
 ---
 <h2 id="_git_hooks">Git 钩子</h2>
 <div class="paragraph">
