--- a/external/book/content/book/zh/v2/自定义-Git-使用强制策略的一个例子.html
+++ b/external/book/content/book/zh/v2/自定义-Git-使用强制策略的一个例子.html
@@ -17,6 +17,9 @@ book:
     next: book/zh/v2/自定义-Git-总结
 title: Git - 使用强制策略的一个例子
 url: "/book/zh/v2/自定义-Git-使用强制策略的一个例子.html"
+aliases:
+- "/book/zh/自定义-Git-Git-强制策略实例.html"
+- "/book/zh/v1/自定义-Git-Git-强制策略实例.html"
 ---
 <h2 id="_an_example_git_enforced_policy">使用强制策略的一个例子</h2>
 <div class="paragraph">
