--- a/external/book/content/book/zh/v2/自定义-Git-配置-Git.html
+++ b/external/book/content/book/zh/v2/自定义-Git-配置-Git.html
@@ -17,6 +17,11 @@ book:
     next: book/zh/v2/自定义-Git-Git-属性
 title: Git - 配置 Git
 url: "/book/zh/v2/自定义-Git-配置-Git.html"
+aliases:
+- "/book/zh/自定义-Git.html"
+- "/book/zh/v1/自定义-Git.html"
+- "/book/zh/自定义-Git-配置-Git.html"
+- "/book/zh/v1/自定义-Git-配置-Git.html"
 ---
 <p>到目前为止，我们已经阐述了 Git 基本的运作机制和使用方式，介绍了许多 Git 提供的工具来帮助你简单且有效地使用它。
 在本章，我们将演示如何借助 Git 的一些重要的配置方法和钩子机制，来满足自定义的需求。
