--- a/external/book/content/book/zh/v2/起步-Git-是什么？.html
+++ b/external/book/content/book/zh/v2/起步-Git-是什么？.html
@@ -17,6 +17,9 @@ book:
     next: book/zh/v2/起步-命令行
 title: Git - Git 是什么？
 url: "/book/zh/v2/起步-Git-是什么？.html"
+aliases:
+- "/book/zh/起步-Git-基础.html"
+- "/book/zh/v1/起步-Git-基础.html"
 ---
 <h2 id="_git_是什么">Git 是什么？</h2>
 <div class="paragraph">
