--- a/external/book/content/book/zh/v2/起步-关于版本控制.html
+++ b/external/book/content/book/zh/v2/起步-关于版本控制.html
@@ -17,6 +17,11 @@ book:
     next: book/zh/v2/起步-Git-简史
 title: Git - 关于版本控制
 url: "/book/zh/v2/起步-关于版本控制.html"
+aliases:
+- "/book/zh/起步.html"
+- "/book/zh/v1/起步.html"
+- "/book/zh/起步-关于版本控制.html"
+- "/book/zh/v1/起步-关于版本控制.html"
 ---
 <p>本章为 Git 入门。
 我们从介绍版本控制工具的背景知识开始，然后讲解如何在你的系统上运行 Git，最后是关于如何设置 Git 以便开始工作。
