--- a/external/book/content/book/zh/v2/起步-初次运行-Git-前的配置.html
+++ b/external/book/content/book/zh/v2/起步-初次运行-Git-前的配置.html
@@ -17,6 +17,9 @@ book:
     next: book/zh/v2/起步-获取帮助
 title: Git - 初次运行 Git 前的配置
 url: "/book/zh/v2/起步-初次运行-Git-前的配置.html"
+aliases:
+- "/book/zh/起步-初次运行-Git-前的配置.html"
+- "/book/zh/v1/起步-初次运行-Git-前的配置.html"
 ---
 <h2 id="_first_time">初次运行 Git 前的配置</h2>
 <div class="paragraph">
