--- a/external/book/content/book/zh/v2/起步-安装-Git.html
+++ b/external/book/content/book/zh/v2/起步-安装-Git.html
@@ -17,6 +17,9 @@ book:
     next: book/zh/v2/起步-初次运行-Git-前的配置
 title: Git - 安装 Git
 url: "/book/zh/v2/起步-安装-Git.html"
+aliases:
+- "/book/zh/起步-安装-Git.html"
+- "/book/zh/v1/起步-安装-Git.html"
 ---
 <h2 id="_安装_git">安装 Git</h2>
 <div class="paragraph">
