--- a/external/book/content/book/zh/v2/起步-获取帮助.html
+++ b/external/book/content/book/zh/v2/起步-获取帮助.html
@@ -17,6 +17,9 @@ book:
     next: book/zh/v2/起步-总结
 title: Git - 获取帮助
 url: "/book/zh/v2/起步-获取帮助.html"
+aliases:
+- "/book/zh/起步-获取帮助.html"
+- "/book/zh/v1/起步-获取帮助.html"
 ---
 <h2 id="_git_help">获取帮助</h2>
 <div class="paragraph">
