--- a/external/book/content/book/zh/v2/附录-C:-Git-命令-设置与配置.html
+++ b/external/book/content/book/zh/v2/附录-C:-Git-命令-设置与配置.html
@@ -17,6 +17,9 @@ book:
     next: book/zh/v2/附录-C:-Git-命令-获取与创建项目
 title: Git - 设置与配置
 url: "/book/zh/v2/附录-C:-Git-命令-设置与配置.html"
+aliases:
+- "/book/zh/commands.html"
+- "/book/zh/v1/commands.html"
 ---
 <p>在这一整本书里我们介绍了大量的 Git 命令，并尽可能通过讲故事的方式来介绍它们，慢慢介绍了越来越多的命令。
 但是这导致这些命令的示例用法都散落在全书的各处。</p><p>在此附录中，我们会将本书中所提到过的命令都过一遍，并根据其用途进行大致分类。
