--- a/external/book/content/book/zh/v2/Git-内部原理-Git-对象.html
+++ b/external/book/content/book/zh/v2/Git-内部原理-Git-对象.html
@@ -17,6 +17,9 @@ book:
     next: book/zh/v2/Git-内部原理-Git-引用
 title: Git - Git 对象
 url: "/book/zh/v2/Git-内部原理-Git-对象.html"
+aliases:
+- "/book/zh/Git-内部原理-Git-对象.html"
+- "/book/zh/v1/Git-内部原理-Git-对象.html"
 ---
 <h2 id="_objects">Git 对象</h2>
 <div class="paragraph">
