--- a/external/book/content/book/zh/v2/Git-内部原理-Git-引用.html
+++ b/external/book/content/book/zh/v2/Git-内部原理-Git-引用.html
@@ -17,6 +17,9 @@ book:
     next: book/zh/v2/Git-内部原理-包文件
 title: Git - Git 引用
 url: "/book/zh/v2/Git-内部原理-Git-引用.html"
+aliases:
+- "/book/zh/Git-内部原理-Git-References.html"
+- "/book/zh/v1/Git-内部原理-Git-References.html"
 ---
 <h2 id="_git_refs">Git 引用</h2>
 <div class="paragraph">
