--- a/external/book/content/book/zh/v2/Git-分支-分支开发工作流.html
+++ b/external/book/content/book/zh/v2/Git-分支-分支开发工作流.html
@@ -17,6 +17,9 @@ book:
     next: book/zh/v2/Git-分支-远程分支
 title: Git - 分支开发工作流
 url: "/book/zh/v2/Git-分支-分支开发工作流.html"
+aliases:
+- "/book/zh/Git-分支-利用分支进行开发的工作流程.html"
+- "/book/zh/v1/Git-分支-利用分支进行开发的工作流程.html"
 ---
 <h2 id="_分支开发工作流">分支开发工作流</h2>
 <div class="paragraph">
