--- a/external/book/content/book/zh/v2/Git-分支-分支的新建与合并.html
+++ b/external/book/content/book/zh/v2/Git-分支-分支的新建与合并.html
@@ -17,6 +17,9 @@ book:
     next: book/zh/v2/Git-分支-分支管理
 title: Git - 分支的新建与合并
 url: "/book/zh/v2/Git-分支-分支的新建与合并.html"
+aliases:
+- "/book/zh/Git-分支-分支的新建与合并.html"
+- "/book/zh/v1/Git-分支-分支的新建与合并.html"
 ---
 <h2 id="_分支的新建与合并">分支的新建与合并</h2>
 <div class="paragraph">
