--- a/external/book/content/book/zh/v2/Git-分支-分支管理.html
+++ b/external/book/content/book/zh/v2/Git-分支-分支管理.html
@@ -17,6 +17,9 @@ book:
     next: book/zh/v2/Git-分支-分支开发工作流
 title: Git - 分支管理
 url: "/book/zh/v2/Git-分支-分支管理.html"
+aliases:
+- "/book/zh/Git-分支-分支的管理.html"
+- "/book/zh/v1/Git-分支-分支的管理.html"
 ---
 <h2 id="_branch_management">分支管理</h2>
 <div class="paragraph">
