--- a/external/book/content/book/zh/v2/Git-分支-变基.html
+++ b/external/book/content/book/zh/v2/Git-分支-变基.html
@@ -17,6 +17,9 @@ book:
     next: book/zh/v2/Git-分支-总结
 title: Git - 变基
 url: "/book/zh/v2/Git-分支-变基.html"
+aliases:
+- "/book/zh/Git-分支-分支的衍合.html"
+- "/book/zh/v1/Git-分支-分支的衍合.html"
 ---
 <h2 id="_rebasing">变基</h2>
 <div class="paragraph">
