--- a/external/book/content/book/zh/v2/Git-基础-总结.html
+++ b/external/book/content/book/zh/v2/Git-基础-总结.html
@@ -17,6 +17,9 @@ book:
     next: book/zh/v2/Git-分支-分支简介
 title: Git - 总结
 url: "/book/zh/v2/Git-基础-总结.html"
+aliases:
+- "/book/zh/Git-基础-小结.html"
+- "/book/zh/v1/Git-基础-小结.html"
 ---
 <h2 id="_总结_2">总结</h2>
 <div class="paragraph">
