--- a/external/book/content/book/zh/v2/Git-工具-使用-Git-调试.html
+++ b/external/book/content/book/zh/v2/Git-工具-使用-Git-调试.html
@@ -17,6 +17,9 @@ book:
     next: book/zh/v2/Git-工具-子模块
 title: Git - 使用 Git 调试
 url: "/book/zh/v2/Git-工具-使用-Git-调试.html"
+aliases:
+- "/book/zh/Git-工具-使用-Git-调试.html"
+- "/book/zh/v1/Git-工具-使用-Git-调试.html"
 ---
 <h2 id="_使用_git_调试">使用 Git 调试</h2>
 <div class="paragraph">
