--- a/external/book/content/book/zh/v2/分布式-Git-总结.html
+++ b/external/book/content/book/zh/v2/分布式-Git-总结.html
@@ -17,6 +17,9 @@ book:
     next: book/zh/v2/GitHub-账户的创建和配置
 title: Git - 总结
 url: "/book/zh/v2/分布式-Git-总结.html"
+aliases:
+- "/book/zh/分布式-Git-小结.html"
+- "/book/zh/v1/分布式-Git-小结.html"
 ---
 <h2 id="_总结_6">总结</h2>
 <div class="paragraph">
