--- a/external/book/content/book/zh/v2/起步-Git-简史.html
+++ b/external/book/content/book/zh/v2/起步-Git-简史.html
@@ -17,6 +17,9 @@ book:
     next: book/zh/v2/起步-Git-是什么？
 title: Git - Git 简史
 url: "/book/zh/v2/起步-Git-简史.html"
+aliases:
+- "/book/zh/起步-Git-简史.html"
+- "/book/zh/v1/起步-Git-简史.html"
 ---
 <h2 id="_git_简史">Git 简史</h2>
 <div class="paragraph">
