--- a/external/book/content/book/zh/v2/起步-总结.html
+++ b/external/book/content/book/zh/v2/起步-总结.html
@@ -17,6 +17,9 @@ book:
     next: book/zh/v2/Git-基础-获取-Git-仓库
 title: Git - 总结
 url: "/book/zh/v2/起步-总结.html"
+aliases:
+- "/book/zh/起步-小结.html"
+- "/book/zh/v1/起步-小结.html"
 ---
 <h2 id="_总结">总结</h2>
 <div class="paragraph">
